# NextFrame

./: -o  .gitignore  .worktrees-reviewer-animation.md  .worktrees-task-animation.md  AGENTS.md  Cargo.toml  MORNING-REPORT.md  README.md  VISION.md  review.json  review.md  reviewer.md  task.md
bridge/: Cargo.toml  README.md
bridge/src/: autosave.rs  compose.rs  dialog.rs  encoding.rs  episode.rs  export.rs  export_runner.rs  ffmpeg.rs  fs.rs  lib.rs  log.rs  path.rs  preview.rs  project.rs  recent.rs  recorder_bridge.rs  scene.rs  segment.rs  tests.rs  time.rs  timeline.rs  validation.rs
bridge/src/codec/: ffmpeg.rs  mod.rs
bridge/src/domain/: mod.rs
bridge/src/export/: lifecycle.rs  mod.rs  recorder_bridge.rs
bridge/src/storage/: fs.rs  mod.rs
bridge/src/tests/: validation_tests.rs
bridge/src/util/: mod.rs  preview.rs
bridge/tests/: integration.rs
bridge/tests/integration/: autosave_tests.rs  dispatch_tests.rs  episode_tests.rs  export_tests.rs  fs_tests.rs  mod.rs  project_tests.rs  recent_tests.rs  scene_tests.rs  segment_tests.rs  timeline_tests.rs
crates/nf-source/: Cargo.toml
crates/nf-source/src/: cli.rs  cmd_align.rs  cmd_cut.rs  cmd_download.rs  cmd_preview.rs  cmd_transcribe.rs  main.rs
crates/videocut-core/: Cargo.toml
crates/videocut-core/src/: fs.rs  lib.rs  plan.rs  srt.rs  time.rs
crates/videocut-cut/: Cargo.toml
crates/videocut-cut/src/: lib.rs
poc-render/X-iosurface-sck/: BRIEF.md  Cargo.toml
poc-render/X-iosurface-sck/src/: main.rs
poc/A-wry-snapshot/: .gitignore  Cargo.toml  report.md
poc/A-wry-snapshot/src/: main.rs
poc/Y-iosurface-layer/: BRIEF.md  Cargo.toml
poc/Y-iosurface-layer/src/: main.rs
shell/: Cargo.toml
shell/src/: app.rs  main.rs  protocol.rs
shell/src/ai_ops/: control.rs  screenshot.rs
shell/src/ipc/: bridge.rs  http.rs  mod.rs
src/crates/nf-align/: CLAUDE.md  Cargo.toml
src/crates/nf-align/src/: lib.rs  script.rs  tests.rs  text.rs
src/crates/nf-source/: CLAUDE.md  Cargo.toml
src/crates/nf-source/src/: cmd_align.rs  cmd_cut.rs  cmd_download.rs  cmd_preview.rs  cmd_transcribe.rs  main.rs  output.rs
src/nf-bridge/: CLAUDE.md  Cargo.toml
src/nf-bridge/src/: lib.rs
src/nf-bridge/src/codec/: encoding.rs  ffmpeg.rs  mod.rs
src/nf-bridge/src/domain/: cli.rs  episode.rs  mod.rs  project.rs  scene.rs  segment.rs  source.rs  timeline.rs  tts.rs
src/nf-bridge/src/export/: lifecycle.rs  mod.rs  recorder_bridge.rs  runner.rs
src/nf-bridge/src/storage/: autosave.rs  fs.rs  mod.rs  recent.rs
src/nf-bridge/src/tests/: encoding_tests.rs  ffmpeg_tests.rs  recorder_tests.rs  validation_tests.rs
src/nf-bridge/src/util/: compose.rs  dialog.rs  log.rs  mod.rs  preview.rs  trace.rs  validation.rs
src/nf-bridge/tests/integration/: autosave_tests.rs  dispatch_tests.rs  episode_tests.rs  export_tests.rs  fs_tests.rs  project_tests.rs  segment_tests.rs  system_tests.rs
src/nf-publish/: .gitignore  CLAUDE.md  Cargo.toml
src/nf-publish/data/fans/: channels.json  douyin.json
src/nf-publish/data/stats/: dashboard.html
src/nf-publish/data/stats/douyin/: 2026-04-04.jsonl
src/nf-publish/scripts/: bili.sh  channels-reply.sh  channels.sh  content-stats.sh  douyin-reply.sh  douyin-stats-cron.sh  douyin-stats.sh  douyin.sh  kuaishou.sh  lib.sh  mp-format.py  mp-style-guide.md  mp.sh  xhs.sh  zhihu.sh
src/nf-publish/scripts/mp-atoms/: atoms-dark.html  atoms-data.html  atoms-dividers.html  atoms-interactive.html  atoms-layout.html  atoms-quotes.html  atoms-typography.html
src/nf-publish/scripts/mp-themes/: magazine.json
src/nf-publish/skills/automedia-setup/: SKILL.md
src/nf-publish/skills/publish-bilibili/: SKILL.md
src/nf-publish/skills/publish-channels/: SKILL.md
src/nf-publish/skills/publish-douyin/: SKILL.md
src/nf-publish/skills/publish-mp/: SKILL.md
src/nf-publish/skills/publish-xiaohongshu/: SKILL.md
src/nf-publish/src/: commands.rs  delegates.rs  error.rs  eval.rs  keyboard.rs  main.rs  polling.rs  tests.rs  ui.rs
src/nf-publish/src/commands/: input.rs  mod.rs  navigation.rs  parser.rs  query.rs  system.rs  tab.rs
src/nf-publish/src/keyboard/: input.rs  mod.rs  shortcuts.rs
src/nf-publish/src/state/: events.rs  mod.rs  navigation.rs  persistence.rs  session.rs  tabs.rs
src/nf-publish/src/state/tabs/: mod.rs  (+2 more)
src/nf-publish/src/ui/: menu.rs  mod.rs  toolbar.rs
src/nf-recorder/: CLAUDE.md  Cargo.toml
src/nf-recorder/src/: capture.rs  lib.rs  main.rs  parallel.rs  plan.rs  progress.rs  util.rs
src/nf-recorder/src/api/: mod.rs  orchestrator.rs
src/nf-recorder/src/encoder/: config.rs  ffmpeg.rs  mod.rs  pipeline.rs  pixel_buffer.rs
src/nf-recorder/src/overlay/: ffmpeg.rs  perf.rs  spec.rs  tests.rs
src/nf-recorder/src/parser/: manifest.rs  mod.rs  srt.rs  tests.rs  types.rs
src/nf-recorder/src/record/: cleanup.rs  frame_loop.rs  mod.rs  setup.rs
src/nf-recorder/src/server/: http.rs  path.rs  tests.rs
src/nf-recorder/src/webview/: capture.rs  frame.rs  inject.rs  mod.rs  navigation.rs  parallel.rs
src/nf-tts/: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/nf-tts/agent/: brief.md
src/nf-tts/agent/rules/: trigger.md  workflow.md  writeback.md
src/nf-tts/docs/alignment-comparison/: README.md  index.html  old_mlx_whisper.py  text.txt
src/nf-tts/scripts/: align_ffa.py
src/nf-tts/spec/: ARCHITECTURE-MANIFESTO.md  ARCHITECTURE.md
src/nf-tts/spec/adr/: 0001-edge-ssml-escaping.md  0002-batch-failure-propagation.md  0003-multi-backend-architecture.md  index.md
src/nf-tts/spec/devlog/: 2026-03-19-initial.md
src/nf-tts/spec/forge/: dev-tools.md  log.md
src/nf-tts/spec/lessons/: 0001-ssml-double-escape.md  0002-batch-silent-failure.md
src/nf-tts/spec/v0.1/: requirements.md  tech-decision.md
src/nf-tts/src/: config.rs  lang.rs  lib.rs  main.rs  whisper.rs
src/nf-tts/src/backend/: mod.rs
src/nf-tts/src/cache/: mod.rs
src/nf-tts/src/cli/: batch.rs  concat.rs  config_cmd.rs  mod.rs  play.rs  preview.rs  synth.rs  voices.rs
src/nf-tts/src/output/: event.rs  mod.rs
src/nf-tts/src/queue/: job.rs  scheduler.rs
src/nf-tts/tests/: smoke.rs
(+1456 files in other folders)
