[workspace]
members = ["shell", "bridge", "recorder", "crates/videocut-core", "crates/videocut-download", "crates/videocut-transcribe", "crates/videocut-align", "crates/videocut-cut", "crates/nf-source"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

[profile.release]
lto = "thin"
