[workspace]
members = ["src/nf-shell", "src/nf-bridge", "src/nf-recorder", "src/nf-tts", "src/nf-publish", "src/crates/nf-cut-core", "src/crates/nf-download", "src/crates/nf-transcribe", "src/crates/nf-align", "src/crates/nf-cut", "src/crates/nf-source"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
wildcard_imports = "deny"

[profile.release]
lto = "thin"
