[package]
name = "shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bridge = { path = "../bridge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.35"
wry = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSString", "NSError"] }
objc2-app-kit = { version = "0.3.2", features = ["NSImage", "NSBitmapImageRep", "NSGraphicsContext"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "WKSnapshotConfiguration"] }

[lints]
workspace = true
