[package]
name = "nf-source"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[[bin]]
name = "nf-source"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
videocut-core = { path = "../videocut-core" }
videocut-download = { path = "../videocut-download" }
videocut-transcribe = { path = "../videocut-transcribe" }
videocut-align = { path = "../videocut-align" }
videocut-cut = { path = "../videocut-cut" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
wildcard_imports = "deny"
