[package]
name = "poc-iosurface-layer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSObject", "NSString", "NSURL", "NSArray",
    "NSError", "NSGeometry", "NSData", "NSValue",
    "NSRunLoop", "NSThread", "NSDictionary", "NSDate",
    "NSURLRequest",
    "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication", "NSWindow", "NSView", "NSResponder",
    "NSGraphics", "NSImage", "NSBitmapImageRep", "NSImageRep",
] }
objc2-core-graphics = { version = "0.3.2", features = [
    "CGBitmapContext", "CGColorSpace", "CGContext",
    "CGGeometry", "CGImage",
] }
objc2-core-media = { version = "0.3.2", features = ["CMTime", "objc2"] }
objc2-quartz-core = { version = "0.3.2", features = [
    "CALayer", "CARenderer",
    "objc2-core-graphics",
] }
objc2-web-kit = { version = "0.3.2", features = [
    "WKWebView", "WKWebViewConfiguration",
    "WKNavigation", "WKNavigationDelegate",
    "block2",
] }
block2 = "0.6"
