[package]
name = "nf-publish"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSObject", "NSString", "NSURL", "NSURLRequest", "NSArray",
    "NSError", "NSGeometry", "NSData", "NSValue", "NSRunLoop",
    "NSThread", "NSNotification", "NSDictionary", "NSCoder",
    "NSURLResponse", "objc2-core-foundation", "NSUUID",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication", "NSWindow", "NSView", "NSResponder",
    "NSRunningApplication", "NSGraphics", "NSImage",
    "NSBitmapImageRep", "NSImageRep",
    "NSControl", "NSButton", "NSSegmentedControl", "NSSegmentedCell",
    "NSTextField", "NSTextView",
    "NSColor", "NSEvent", "NSGraphicsContext",
    "NSFont",
] }
objc2-web-kit = { version = "0.3.2", features = [
    "WKWebView", "WKWebViewConfiguration", "WKSnapshotConfiguration",
    "WKUIDelegate", "WKOpenPanelParameters", "WKNavigation",
    "WKNavigationDelegate", "WKNavigationAction", "WKNavigationResponse",
    "WKFrameInfo", "WKWebsiteDataStore",
    "WKUserContentController", "WKUserScript",
    "WKProcessPool", "WKPreferences",
    "block2",
] }
block2 = "0.6"
dispatch = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
