[package]
name = "nf-recorder"
version = "0.1.0"
edition = "2024"
description = "HTML-to-video recorder using WKWebView layer rendering and AVAssetWriter"

[[bin]]
name = "nextframe-recorder"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[lib]
name = "nextframe_recorder"
path = "src/lib.rs"

[dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-core-graphics = { version = "0.3.2", features = [
    "CGBitmapContext",
    "CGColorSpace",
    "CGContext",
    "CGGeometry",
    "CGImage",
] }
objc2-core-media = { version = "0.3.2", features = ["CMTime", "objc2"] }
objc2-quartz-core = { version = "0.3.2", features = [
    "CALayer",
    "objc2-core-graphics",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSObject", "NSString", "NSURL", "NSArray",
    "NSError", "NSGeometry", "NSData", "NSValue",
    "NSRunLoop", "NSThread", "NSDictionary", "NSDate",
    "NSURLRequest",
    "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication", "NSWindow", "NSView", "NSResponder",
    "NSGraphics", "NSImage", "NSBitmapImageRep", "NSImageRep",
] }
objc2-web-kit = { version = "0.3.2", features = [
    "WKWebView", "WKWebViewConfiguration",
    "WKSnapshotConfiguration",
    "WKNavigation", "WKNavigationDelegate",
    "WKUserContentController", "WKUserScript",
    "block2",
] }
block2 = "0.6"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[lints]
workspace = true
